--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,24 @@
 </head>
 
 <body>
-  hehe
+  <header>
+    <nav>
+      <h1>nav</h1>
+      <div id="drop-down-cont">
+        <div id='drop-down-title-cont'>
+          <h2 id="drop-down-title">Drop Down Menu</h2>
+        </div>
+        <ul id="drop-down-list" class='menu-inactive'>
+          <li>Shoes</li>
+          <li>Clothes</li>
+          <li>Accessories</li>
+        </ul>
+      </div>
+      <h1>nav</h1>
+    </nav>
+  </header>
+  <main>
+  </main>
 </body>
 
 </html>
