--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
         <div id='drop-down-title-cont'>
           <h2 id="drop-down-title">Drop Down Menu</h2>
         </div>
-        <ul id="drop-down-list" class='menu-inactive'>
+        <ul id="drop-down-list">
           <li>Shoes</li>
           <li>Clothes</li>
           <li>Accessories</li>
