--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,6 @@
 <body>
   <header>
     <nav>
-      <h1>nav</h1>
       <div id="drop-down-cont">
         <div id='drop-down-title-cont'>
           <h2 id="drop-down-title">Drop Down Menu</h2>
@@ -18,9 +17,11 @@
           <li>Shoes</li>
           <li>Clothes</li>
           <li>Accessories</li>
+          <li>and</li>
+          <li>we're</li>
+          <li>falling</li>
         </ul>
       </div>
-      <h1>nav</h1>
     </nav>
   </header>
   <main>
