functional rudder navigation

--- a/src/index.html
+++ b/src/index.html
@@ -3,29 +3,28 @@
 
 <head>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Test Development</title>
 </head>
-
-<body>
-  <header>
-    <nav>
-      <div id="drop-down-cont">
-        <div id='drop-down-title-cont'>
-          <h2 id="drop-down-title">Drop Down Menu</h2>
-        </div>
-        <ul id="drop-down-list">
-          <li>Shoes</li>
-          <li>Clothes</li>
-          <li>Accessories</li>
-          <li>and</li>
-          <li>we're</li>
-          <li>falling</li>
-        </ul>
-      </div>
-    </nav>
-  </header>
-  <main>
-  </main>
+<header>
+</header>
+<main>
+  <div>
+    <h2>main contents</h2>
+  </div>
+  <nav>
+    <div id="rudder-container">
+      <ul id="rudder-item-list" class="rudder-active">
+        <li>A</li>
+        <li>B</li>
+        <li id="main-item">S</li>
+        <li>C</li>
+        <li>D</li>
+      </ul>
+    </div>
+  </nav>
+</main>
 </body>
 
 </html>
