--- a/src/index.html
+++ b/src/index.html
@@ -16,11 +16,15 @@
   <nav>
     <div id="rudder-container">
       <ul id="rudder-item-list" class="rudder-active">
-        <li>A</li>
-        <li>B</li>
+        <div id="left-rud-item" class='left-rud-active'>
+          <li>A</li>
+          <li>B</li>
+        </div>
         <li id="main-item">S</li>
-        <li>C</li>
-        <li>D</li>
+        <div id="right-rud-item" class='right-rud-active'>
+          <li>C</li>
+          <li>D</li>
+        </div>
       </ul>
     </div>
   </nav>
