--- a/src/index.html
+++ b/src/index.html
@@ -17,13 +17,13 @@
     <div id="rudder-container">
       <ul id="rudder-item-list" class="rudder-active">
         <div id="left-rud-item" class='left-rud-active'>
-          <li>A</li>
-          <li>B</li>
+          <li></li>
+          <li></li>
         </div>
-        <li id="main-item">S</li>
+        <li id="main-item"></li>
         <div id="right-rud-item" class='right-rud-active'>
-          <li>C</li>
-          <li>D</li>
+          <li></li>
+          <li></li>
         </div>
       </ul>
     </div>
