--- a/src/index.html
+++ b/src/index.html
@@ -17,13 +17,13 @@
     <div id="rudder-container">
       <ul id="rudder-item-list" class="rudder-active">
         <div id="left-rud-item" class='left-rud-active'>
-          <li></li>
-          <li></li>
+          <li id="loc"></li>
+          <li id="msg"></li>
         </div>
         <li id="main-item"></li>
         <div id="right-rud-item" class='right-rud-active'>
-          <li></li>
-          <li></li>
+          <li id="user"></li>
+          <li id="settings"></li>
         </div>
       </ul>
     </div>
