fetching geocoding api and current weather data api

--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,16 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Test Development</title>
+  <title>Weather App</title>
 </head>
 <header>
 </header>
 <main>
-  <img src="#" alt="">
+  <form>
+    <label for='usr-input'> City
+      <input type='text' id='usr-input' name='input'></label>
+    <button type='submit'> Submit entry </button>
+  </form>
   <nav>
   </nav>
 </main>
