fonts and icons

--- a/src/index.html
+++ b/src/index.html
@@ -8,15 +8,21 @@
   <title>Weather App</title>
 </head>
 <header>
+  <h1 id="logo">Weather-App</h1>
+  <div id="search-cont">
+    <input type="search" placeholder="Type in Your City" name="srch" id="srch" value="">
+  </div>
+  <div id="github-cont">
+    <img src="" alt="">
+    <p>GitHub</p>
+  </div>
 </header>
 <main>
-  <form>
-    <label for='usr-input'> City
-      <input type='text' id='usr-input' name='input'></label>
-    <button type='submit'> Submit entry </button>
-  </form>
-  <nav>
-  </nav>
+  <!-- <form> -->
+  <!--   <label for='usr-input'> City -->
+  <!--     <input type='text' id='usr-input' name='input'></label> -->
+  <!--   <button type='submit'> Submit entry </button> -->
+  <!-- </form> -->
 </main>
 </body>
 
