added place holders

--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,10 @@
   <div id="search-cont">
     <input type="search" placeholder="Type in Your City" name="srch" id="srch" value="">
   </div>
-  <div id="github-cont">
-    <img src="" alt="">
+  <a id="github-cont" href="#">
+    <img id='git-img' src="./resources/img/github.png" alt="">
     <p>GitHub</p>
-  </div>
+  </a>
 </header>
 <main>
   <!-- <form> -->
@@ -23,6 +23,23 @@
   <!--     <input type='text' id='usr-input' name='input'></label> -->
   <!--   <button type='submit'> Submit entry </button> -->
   <!-- </form> -->
+  <div id="weather-cont">
+    <div id="imp-details">
+      <h2 id="city">placeholder</h2>
+      <h3 id="temperature">12</h3>
+      <p id="description">Lorem ipsum dolor sit amet.</p>
+      <div id="min-max-temp-cont">
+        <p id="min-temp">12</p>
+        <p id="max-temp">20</p>
+      </div>
+    </div>
+    <div id="current-day-weather">
+    </div>
+    <div id="upcoming-weather">
+
+    </div>
+  </div>
+
 </main>
 </body>
 
