now able to grab and display current weather on page

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,8 @@
 <header>
   <h1 id="logo">Weather-App</h1>
   <div id="search-cont">
-    <input type="search" placeholder="Type in Your City" name="srch" id="srch" value="">
+    <input type="text" placeholder="Type in Your City" name="srch" id="srch" value="">
+    <button id="search" type="button">Search</button>
   </div>
   <a id="github-cont" href="#">
     <img id='git-img' src="./resources/img/github.png" alt="">
@@ -28,7 +29,7 @@
       <h2 id="city">placeholder</h2>
       <h3 id="temperature">12</h3>
       <p id="description">Lorem ipsum dolor sit amet.</p>
-      <div id="min-max-temp-cont">
+      <div id="min-max-temp">
         <p id="min-temp">12</p>
         <p id="max-temp">20</p>
       </div>
