--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <h1 id="logo">Weather-App</h1>
   <div id="search-cont">
     <input type="text" placeholder="Type in Your City" name="srch" id="srch" value="">
-    <button id="search" type="button">Search</button>
+    <!-- <button id="search" type="button">Search</button> -->
   </div>
   <a id="github-cont" href="#">
     <img id='git-img' src="./resources/img/github.png" alt="">
@@ -19,11 +19,6 @@
   </a>
 </header>
 <main>
-  <!-- <form> -->
-  <!--   <label for='usr-input'> City -->
-  <!--     <input type='text' id='usr-input' name='input'></label> -->
-  <!--   <button type='submit'> Submit entry </button> -->
-  <!-- </form> -->
   <div id="weather-cont">
     <div id="imp-details">
       <h2 id="city">placeholder</h2>
