classes to check and change temoerature

--- a/src/index.html
+++ b/src/index.html
@@ -20,12 +20,12 @@
 <main>
   <div id="weather-cont">
     <div id="imp-details">
-      <h2 id="city">placeholder</h2>
-      <h3 id="temperature">12</h3>
-      <p id="description">Lorem ipsum dolor sit amet.</p>
+      <h2 id="city"></h2>
+      <h3 id="temperature"></h3>
+      <p id="description"></p>
       <div id="min-max-temp">
-        <p id="min-temp">12</p>
-        <p id="max-temp">20</p>
+        <p id="max-temp"></p>
+        <p id="min-temp"></p>
       </div>
     </div>
     <div id="current-day-weather">
