--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
   <div id="weather-cont">
     <div id="imp-details">
       <h2 id="city"></h2>
-      <h3 id="temperature"></h3>
+      <h3 id="temperature" class="isC"></h3>
       <p id="description"></p>
       <div id="min-max-temp">
         <p id="max-temp"></p>
