added and removed unused images and sorted images with corresponding folders

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <input type="text" placeholder="Type in Your City" name="srch" id="srch" value="">
   </div>
   <a id="github-cont" href="#">
-    <img id='git-img' src="./resources/img/github.png" alt="">
+    <img id='git-img' src="./resources/img//github/github.png" alt="">
     <p>GitHub</p>
   </a>
 </header>
