--- a/src/index.html
+++ b/src/index.html
@@ -19,19 +19,31 @@
 </header>
 <main>
   <div id="weather-cont">
-    <div id="imp-details">
-      <h2 id="city"></h2>
-      <h3 id="temperature" class="isC"></h3>
-      <p id="description"></p>
-      <div id="min-max-temp">
-        <p id="max-temp"></p>
-        <p id="min-temp"></p>
+    <div id="current-cont">
+      <div id="imp-details">
+        <h2 id="city"></h2>
+        <h3 id="temperature" class="isC"></h3>
+        <p id="description"></p>
+        <div id="min-max-temp">
+          <p id="max-temp"></p>
+          <p id="min-temp"></p>
+        </div>
+      </div>
+      <div id="current-hourly-chart">
+        hourly
       </div>
     </div>
-    <div id="current-day-weather">
-    </div>
-    <div id="upcoming-weather">
-
+    <div id="daily">
+      <ul id="daily-list-cont">
+        <li>ph</li>
+        <li>ph</li>
+        <li>ph</li>
+        <li>ph</li>
+        <li>ph</li>
+        <li>ph</li>
+        <li>ph</li>
+        <li>ph</li>
+      </ul>
     </div>
   </div>
 
