--- a/src/index.html
+++ b/src/index.html
@@ -20,13 +20,24 @@
 <main>
   <div id="weather-cont">
     <div id="current-cont">
-      <div id="imp-details">
-        <h2 id="city"></h2>
-        <h3 id="temperature" class="isC"></h3>
-        <p id="description"></p>
-        <div id="min-max-temp">
-          <p id="max-temp"></p>
-          <p id="min-temp"></p>
+      <div id="detail-curr-cont">
+        <div id="imp-details">
+          <h2 id="city"></h2>
+          <h3 id="temperature" class="isC"></h3>
+          <p id="description"></p>
+          <div id="min-max-temp">
+            <p id="max-temp"></p>
+            <p id="min-temp"></p>
+          </div>
+        </div>
+        <div id="upper-extra-inf">
+          <p>something in here:123</p>
+          <p>something in here:123</p>
+        </div>
+        <div id="lower-extra-inf">
+          <p>something in here:<span>icon 123</span> </p>
+          <p>something in here:<span>icon 123</span> </p>
+          <p>something in here:<span>icon 123</span> </p>
         </div>
       </div>
       <div id="current-hourly-chart">
@@ -35,14 +46,14 @@
     </div>
     <div id="daily">
       <ul id="daily-list-cont">
-        <li>ph</li>
-        <li>ph</li>
-        <li>ph</li>
-        <li>ph</li>
-        <li>ph</li>
-        <li>ph</li>
-        <li>ph</li>
-        <li>ph</li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
       </ul>
     </div>
   </div>
