--- a/src/index.html
+++ b/src/index.html
@@ -31,13 +31,13 @@
           </div>
         </div>
         <div id="upper-extra-inf">
-          <p>something in here:<span>icon 123</span> </p>
-          <p>something in here:<span>icon 123</span> </p>
-          <p>something in here:<span>icon 123</span> </p>
+          <p id="inf-2">something in here:<span>icon 123</span> </p>
+          <p id="inf-0">something in here:<span>icon 123</span> </p>
+          <p id="inf-1">something in here:<span>icon 123</span> </p>
         </div>
         <div id="lower-extra-inf">
-          <p>something in here:<span>icon 123</span></p>
-          <p>something in here:<span>icon 123</span></p>
+          <p id="low-inf-0">Wind Direction:<span id="low-inf-0-val">icon 123</span></p>
+          <p id="low-inf-1">Wind Speed:<span id="low-inf-1-val">icon 123</span></p>
         </div>
       </div>
       <div id="current-hourly-chart">
