--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 <header>
   <h1 id="logo">Weather-App</h1>
   <div id="search-cont">
-    <input type="text" placeholder="Type in Your City" name="srch" id="srch" value="">
+    <input type="search" placeholder="Type in Your City" name="srch" id="srch" value="">
   </div>
   <a id="github-cont" href="#">
     <img id='git-img' src="./resources/img//github/github.png" alt="">
