--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,27 @@
     </div>
     <div id="daily">
       <ul id="daily-list-cont">
-        <li></li>
+        <li id="wed">
+          <h4>Wed</h4>
+          <p id="wed-temp">38C</p>
+          <div>
+
+          </div> <!-- <img id="wed-img" src="./resources/img/rain/rain.png" alt="icon"> -->
+        </li>
+        <li id="wed">
+          <h4>Wed</h4>
+          <p id="wed-temp">38C</p>
+          <div>
+
+          </div> <!-- <img id="wed-img" src="./resources/img/rain/rain.png" alt="icon"> -->
+        </li>
+        <li id="wed">
+          <h4>Wed</h4>
+          <p id="wed-temp">38C</p>
+          <div>
+
+          </div>
+        </li>
         <li></li>
         <li></li>
         <li></li>
