able to display daily cards

--- a/src/index.html
+++ b/src/index.html
@@ -45,17 +45,17 @@
     </div>
     <div id="daily">
       <ul id="daily-list-cont">
-        <li class="cards">
-          <h4>Wed</h4>
-          <p id="wed-temp">38C</p>
-          <div>
-          </div>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <!-- <li class="cards"> -->
+        <!--   <h4>Wed</h4> -->
+        <!--   <p id="wed-temp">38C</p> -->
+        <!--   <div> -->
+        <!--   </div> -->
+        <!-- <li></li> -->
+        <!-- <li></li> -->
+        <!-- <li></li> -->
+        <!-- <li></li> -->
+        <!-- <li></li> -->
+        <!-- <li></li> -->
       </ul>
     </div>
   </div>
