--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,7 @@
         </div>
         <div id="lower-extra-inf">
           <p id="low-inf-0">Wind Direction:<span id="low-inf-0-val">icon 123</span></p>
+          <p id="low-inf-2">Visibility:<span id="low-inf-2-val">icon 123</span></p>
           <p id="low-inf-1">Wind Speed:<span id="low-inf-1-val">icon 123</span></p>
         </div>
       </div>
