contained chart within a container

--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,7 @@
         </div>
       </div>
       <div id="current-hourly-chart">
+        <canvas id="myChart"></canvas>
       </div>
     </div>
     <div id="daily">
