--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <div id="search-cont">
     <input type="search" placeholder="Type in Your City" name="srch" id="srch" value="">
   </div>
-  <a id="github-cont" href="#">
+  <a id="github-cont" href="https://github.com/Sty6x">
     <img id='git-img' src="./resources/img//github/github.png" alt="">
     <p>GitHub</p>
   </a>
